Test/errors/err_alignas_too_large.cb
// alignas values above 4096 are rejected.

expect_error("alignas: value 8192 exceeds maximum of 4096") {
    alignas(8192) int x = 0;
}
